--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="m-1 mb-4">
-                            <label for="email" class="form-label">Почта, на которую придёт код регистрации в приложении <span class="text-danger fs-6"> *</span></label>
+                            <label for="email" class="form-label">Почта, на которую придёт код для регистрации в приложении <span class="text-danger fs-6"> *</span></label>
                             <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
                         </div>
                         <div class="m-1 mb-4">
