--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -178,7 +178,7 @@
                 <div class="col-12">
                     <h3 class="fs-4">История лечения</h3>
                     <p class="mb-1">
-                        <a href="#" th:href="@{/patients/__${user.id}__/anamnesis}" class="text-secondary">Перейти к анамнезу</a>
+                        <a href="#" th:href="@{/anamnesis/for/__${user.id}__}" class="text-secondary">Перейти к анамнезу</a>
                     </p>
                     <p class="mb-0">
                         <a href="#" th:href="@{/patients/__${user.id}__/indicators}" class="text-secondary">Перейти к показателям</a>
