--- a/src/main/resources/templates/indicators/indicators.html
+++ b/src/main/resources/templates/indicators/indicators.html
@@ -124,11 +124,11 @@
             </div>
         </div>
         <!---->
-        <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-        <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
+        <div th:replace="${isCurrentUserOwnDoctor} ? ~{/fragments/modal/error-modal :: error-modal} : ~{}"></div>
+        <div th:replace="${isCurrentUserOwnDoctor} ? ~{/fragments/modal/success-modal :: success-modal} : ~{}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../../static/js/patients/indicators.js" th:src="@{/js/patients/indicators.js}"></script>
+        <script src="../../static/js/indicators/indicators.js" th:src="@{/js/indicators/indicators.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
